# paygateway

./: CMakeLists.txt  Doxyfile  README.md  httpd.c  httpd.h  init_daemon.c  init_daemon.cc  main.c  main.cc  paymentclient.c  socket.c  socket.cc
proto/: cup_payment.proto  iboxpay_payment.proto  make_proto.sh  post.py
src/: CMakeLists.txt  httpd.cc  httpd.h  init_daemon.cc  main.cc  socket.cc  socket.h
test/: ab-post.sh  client_post.py  echo.rb  gen_proto.sh  post.txt  server_echo.rb
